# tesslate-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DOCS.md
examples/harbor/: .env.example  run.sh  tesslate-studio-job-full.yaml  tesslate-studio-job-headtohead.yaml  tesslate-studio-job-winnable.yaml  tesslate-studio-job.yaml
src/tesslate_agent/: __init__.py  errors.py
src/tesslate_agent/agent/: __init__.py  base.py  models.py  tesslate_agent.py  trajectory.py
src/tesslate_agent/agent/tools/: __init__.py  approval_manager.py  output_formatter.py  registry.py  retry_config.py
src/tesslate_agent/cli/: __init__.py  __main__.py  context.py  prompts.py  runner.py  trajectory_bridge.py
src/tesslate_agent/orchestration/: __init__.py  base.py  deployment_mode.py  factory.py  local.py
tests/agent/: test_budget_exhausted.py  test_litellm_adapter.py  test_registry.py  test_tesslate_agent.py
tests/agent/tools/delegation_ops/: test_delegation_ops.py
tests/agent/tools/file_ops/: conftest.py  test_apply_patch.py  test_edit.py  test_edit_history.py  test_read_many_files.py  test_read_write.py  test_undo_tool.py  test_view_image.py
tests/agent/tools/git_ops/: conftest.py  test_git_blame_tool.py  test_git_diff_tool.py  test_git_log_tool.py  test_git_status_tool.py
tests/agent/tools/memory_ops/: test_memory_tool.py
tests/agent/tools/nav_ops/: conftest.py  test_glob_tool.py  test_grep_tool.py  test_list_dir_tool.py
tests/agent/tools/planning_ops/: test_update_plan.py
tests/agent/tools/shell_ops/: test_background.py  test_bash.py  test_execute_security.py  test_python_repl.py  test_session.py  test_write_stdin.py
tests/cli/: test_runner_signals.py  test_runner_smoke.py
tests/orchestration/: test_local_orchestrator.py
(+39 files in other folders)
